--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2365,7 +2365,7 @@ input, select, textarea {
 		/* Footer */
 
 			#footer {
-				margin-left: 20%;
+				margin-left: 100%;
 			}
 
 		/* Main */
@@ -2623,7 +2623,7 @@ input, select, textarea {
 				line-height: 1.25em;
 				border: 0;
 				padding: 0;
-				margin: 0 0 0 0;
+				margin: 1.2em 0 0 0;
 			}
 
 				#footer .copyright li:first-child {
