--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2247,7 +2247,7 @@ input, select, textarea {
 			}
 
 			#main > section.one {
-				background-color: #81918E;
+				background-color: #fff; /*#81918E;*/
 				background-image: url("../../images/MtHood.jpg");
 			}
 /*bookmark*/
