website color change 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2218,8 +2218,8 @@ input, select, textarea {
 		}
 
 			#main > section.dark {
-				color: #ddd;
-				color: rgba(255, 255, 255, 0.75);
+				color: #fff; /*#ddd;*/
+				color: #fff; /*rgba(255, 255, 255, 0.75);*/
 			}
 
 				#main > section.dark h2, #main > section.dark h3, #main > section.dark h4, #main > section.dark h5, #main > section.dark h6 {
