website color change 5

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -764,15 +764,15 @@
 			}
 
 			&.two {
-				background-color: #f5fafa;
+				background-color: #fff;
 			}
 
 			&.three {
-				background-color: #ecf1f1;
+				background-color: #fff;
 			}
 
 			&.four {
-				background-color: #e8edec;
+				background-color: #fff;
 			}
 		}
 	}
