--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2209,12 +2209,13 @@ input, select, textarea {
 	}
 
 		#main > section {
+			background-color: #fff;
 			margin: 0;
 			overflow: hidden;
 			padding: 4em 0;
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 			text-align: center;
-			background-image: url("images/overlay.png");
+			/*background-image: url("images/overlay.png");*/
 		}
 
 			#main > section.dark {
