website color change 12

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1912,7 +1912,7 @@ input, select, textarea {
 	}
 
 		table tbody tr:nth-child(2n+2) {
-			background: #fff; /*#f4f4f4;*/
+			background: #f4f4f4;
 		}
 
 		table td {
@@ -2218,8 +2218,8 @@ input, select, textarea {
 		}
 
 			#main > section.dark {
-				color: #fff; /*#ddd;*/
-				color: #fff; /*rgba(255, 255, 255, 0.75);*/
+				color: #ddd;
+				color: rgba(255, 255, 255, 0.75);
 			}
 
 				#main > section.dark h2, #main > section.dark h3, #main > section.dark h4, #main > section.dark h5, #main > section.dark h6 {
@@ -2247,20 +2247,20 @@ input, select, textarea {
 			}
 
 			#main > section.one {
-				background-color: #fff; /*#81918E;*/
+				background-color: #81918E;
 				background-image: url("../../images/MtHood.jpg");
 			}
 /*bookmark*/
 			#main > section.two {
-				background-color: #fff; /* #f5fafa;*/
+				background-color: #f5fafa;
 			}
 
 			#main > section.three {
-				background-color: #fff; /*#ecf1f1;*/
+				background-color: #ecf1f1;
 			}
 
 			#main > section.four {
-				background-color: #fff; /*#e8edec;*/
+				background-color: #e8edec;
 			}
 
 /* Wide */
