--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2223,7 +2223,7 @@ input, select, textarea {
 			}
 
 				#main > section.dark h2, #main > section.dark h3, #main > section.dark h4, #main > section.dark h5, #main > section.dark h6 {
-					color: #fff;
+					color: inherit;
 				}
 
 				#main > section.dark strong {
